--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,7 +5,7 @@
 html,
 body {
   height: 100%;
-  background-color: #4791D2;
+  background-color: #333333;
 }
 
 body {
@@ -16,7 +16,7 @@ body {
 
 .btn-shorten {
   color: #ffffff;
-  background-color: #F89406;
+  background-color: #f05424;
   border: none;
 }
 
@@ -25,7 +25,7 @@ body {
 .btn-shorten:active,
 .btn-shorten.active {
   color: #ffffff;
-  background-color: #FA8900;
+  background-color: #f05424;
   border: none;
 }
 
@@ -61,6 +61,8 @@ body {
 
 .inner h1 {
   margin-top: 5px;
+  padding-bottom: 30px;
+  font-size: 25px;
 }
 
 #link {
