--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>URL Shortener - coligo.io</title>
+  <title>URL Shortener - Praga Web Studio</title>
   <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link href="css/styles.css" rel="stylesheet">
@@ -19,9 +19,9 @@
       <div class="main-container">
 
         <div class="inner cover">
-          <span class="glyphicon glyphicon-link"></span>
+
+          <img width="350" src="http://www.pragawebstudio.com/wp-content/uploads/2015/08/Untitled-3.png?ef780a" alt="Praga Web Studio">
           <h1>URL Shortener</h1>
-          <h4>coligo.io</h4>
 
           <div class="row">
 
